github markdown (tables + github newlines)

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 "HTML-CSS": { availableFonts: ["STIX","TeX"], imageFont: null }
             });
         </script>
-        <script type="text/javascript" src="lib/showdown.js"></script>
+        <script type="text/javascript" src="lib/marked.js"></script>
     <script type="text/javascript" src="default-txt.js"></script>
     <script type="text/javascript" src="inkline.js"></script>
     <!-- start OMeta stuff -->
